<package>
   <name>gvg</name>
  <version>0.0.1</version>
  <description>
    The low level behaviours required for the GVG navigation
  </description>
  <maintainer email="yiannis@cim.mcgill.ca">Ioannis Rekleitis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/GVG</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>laser_node</build_depend>
  <build_depend>robot_node</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>gvg_planner</build_depend>
  <build_depend>gvg_mapper</build_depend>
  <build_depend>remapper</build_depend>
  <build_depend>bullet</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_node</run_depend>
  <run_depend>robot_node</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>gvg_planner</run_depend>
  <run_depend>gvg_mapper</run_depend>
  <run_depend>remapper</run_depend>
  <run_depend>bullet</run_depend>



</package>


