<package>
  <name>robot_node</name>
  <version>0.0.1</version>

  <description>
  The robot_node package provides a unified interface for different robots.
  It also inludes a control for wall following.
  </description>

  <maintainer email="yiannis@cim.mcgill.ca">Ioannis Rekleitis</maintainer>
  <license>BSD</license>
  <url>http://ros.org/wiki/robot_node</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>bullet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  


  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>bullet</run_depend>
</package>


